<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        tools:context=".ui.movie.MovieActivity">


        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="36dp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Chappie" />

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="172dp"
            android:layout_height="250dp"
            android:contentDescription="@string/movie_image_description"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:src="@mipmap/ic_launcher" />


        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
            tools:text="6.2 / 10" />

        <TextView
            android:id="@+id/tv_plot"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie"
            tools:text="Every six years, an ancient order of jiu-jitsu fighters joins forces to battle a vicious race of alien invaders. But when a celebrated war hero goes down in defeat, the fate of the planet and mankind hangs in the balance." />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/iv_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="2020-11-20" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/trailers_label"
            android:textColor="@color/grey_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plot" />

        <LinearLayout
            android:id="@+id/trailers_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_height="40dp">

            <TextView
                android:id="@+id/tv_no_trailers"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingVertical="8dp"
                android:text="@string/no_trailers"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reviews_label"
            android:textColor="@color/grey_600"
            app:layout_constraintStart_toStartOf="@+id/trailers_container"
            app:layout_constraintTop_toBottomOf="@+id/trailers_container" />

        <LinearLayout
            android:id="@+id/reviews_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_height="40dp">

            <TextView
                android:id="@+id/tv_no_reviews"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingVertical="8dp"
                android:text="@string/no_reviews"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_favorite_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/favorite_icon_description"
            app:layout_constraintStart_toStartOf="@+id/tv_vote_average"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average"
            app:srcCompat="@drawable/ic_star_outline"
            android:onClick="setFavoriteStatus"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>